# progettoProva

./: CMakeLists.txt  README.md  main.c
header/: errori.h  evento.h  grafo.h  personaggio.h  provaHash.h  provaHashSemplice.h  statistiche.h  testRunner.h  zolla.h
resource/: errori.c  evento.c  grafo.c  personaggio.c  provaHash.c  provaHashSemplice.c  statistiche.c  testRunner.c
test/: nomi.txt  statistiche.txt  test.txt
utili/: costanti.h  enum.h
